crates/nexus-macros/tests/macro_compile_fail/aggregate_missing_id.stderr
error: `id` is required
 --> tests/macro_compile_fail/aggregate_missing_id.rs:4:8
  |
4 | struct MissingId;
  |        ^^^^^^^^^
