crates/nexus-macros/tests/macro_compile_fail/aggregate_missing_id.rs
/// aggregate macro must require `id`.

#[nexus::aggregate(state = (), error = std::io::Error)]
struct MissingId;

fn main() {}
